# jsonpp

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh.md  basic_json_stream.h  jsonexception.h  jsonpp.cpp  jsonpp.h  main.cpp  print.h  stream_traits.h
src/: basic_json.hpp  basic_json_impl.hpp  json_fwd.hpp  json_serialize_handler.hpp  json_serializer.hpp  json_stream_adaptor.h  json_stream_adaptor.hpp  jsonexception.h  jsonexception.hpp  jsonpp.cpp  jsonpp.h  jsonpp.hpp  macro_def.hpp  parser.hpp  serializer.hpp  stream_traits.hpp  traits.hpp
src/detail/: basic_json.hpp  basic_json_impl.hpp  json_fwd.hpp  json_serialize_handler.hpp  json_serializer.hpp  jsonexception.hpp  macro_def.hpp  parser.hpp  traits.hpp
tests/: .generateAdvancedParsingTests.sh  .generateEdgeCaseTests.sh  .generateErrorHandlingTestFiles.sh  .generateRoundtripTests.sh  .generateUsabilityTestFiles.sh  gtest_correctness.cpp  gtest_roundtrip.cpp  gtest_spotcheck.cpp  gtest_usage.cpp  test.cpp  test.h  test_parsing_serializing.cpp  test_usage.cpp  test_utils.hpp
tests/manual_validation_tests/: .generateAdvancedParsingTests.sh  .generateEdgeCaseTests.sh  .generateErrorHandlingTestFiles.sh  .generateUsabilityTestFiles.sh  test_parsing_serializing.cpp
